ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail6.mligo
let t = fun (x : int list) ->
  match x with
  | a -> 0
  | hd::tl -> 0